www/sites/all/themes/rbkc/css/main.css
/* ... */
.iconlinks--top-tasks {
  margin-bottom: 36px;
  margin-bottom: 2.25rem;
}
.iconlinks--top-tasks li:first-child a {
  padding-top: 24px;
  padding-top: 2rem;
  background-position: 1rem 60%;
}
.iconlinks--top-tasks li:last-child a {
  padding-bottom: 2rem;
  padding-bottom: 32px;
  background-position: 1rem 35%;
  border-bottom: solid #58d2c4 1px;
}

/***  secondary info on service hub page ***/
.secondary-topics  h2 {
  margin-bottom:8px;
  margin-bottom:0.5rem;
}

/*** tertiary info on service hub page ***/
.tertiary-topics {
  padding:21px;
  padding: 1.3rem;
  margin-top:16px;
  margin-top:1rem;
  margin-bottom: 36px;
  margin-bottom: 2.25rem;
}
.tertiary-topics li {
  padding-left: 16px;
  padding-left: 1rem;
  margin-bottom: 13px;
  margin-bottom: 0.8rem;
}
.tertiary-topics li:last-child {
  margin-bottom: 0;
}

/*** features with images on service hub page ***/
.hub-feature {
  margin-top:16px;
  margin-top:1rem;
}
.hub-feature li {
  overflow:hidden;
  margin-bottom:32px;
  margin-bottom: 2rem;
}
.hub-feature__text {
  padding: 20px 20px 20px 0;
}
.hub-feature img {
  float:left;
  margin-right: 20px;
  margin-right: 1.3rem;
  height: 94px;
  width: 91px;
}

/***** Service Sub-Hub ********/
.sub-hub-topic {
  padding: 24px 0;
}
.sub-hub-topic h3 {
  margin-bottom:6px;
}
.sub-hub-topic li:first-child,
.sub-hub-topic li:nth-child(2),
.sub-hub-topic li:nth-child(3) {
  display: block !important;
}
.sub-hub-topic .view-all {
  display: inline;
  background: url('../images/refresh/chevron-down-blue.png') no-repeat right 40%;
  background-size: 14px;
  padding-right: 22px;
  color: #376697;
  font-size: 14px;
  font-size:.875rem;
}
.sub-hub-topic .view-all:hover {
  border-bottom: dotted 1px;
}
.sub-hub-topic .view-all.open {
  background: url('../images/refresh/chevron-up-blue.png') no-repeat right 40%;
  background-size: 14px;
}

/* begin Topic page elements (simple list page) */
.topics {
  margin-left:auto !important;
  margin-right:auto !important;
  float: none !important;
  padding: 36px 0 24px 0;
}
.topics h2 {
  margin-bottom:6px;
/*  font-size:18px;
  font-size:1.125rem; */
}
.topics h2 a {
  border-bottom: 0;
}
.topics h2 a:hover {
  border-bottom: dotted 1px;
}

/* begin related menu for answer and guide page */
.related {
  font-size: 14px;
  font-size:.875rem;
  line-height:24px;
  line-height:1.5rem;
  /* do not change - fits the 12px baseline grid */
  margin:0 0 24px 0;
  overflow: hidden;
}
.related .view-all {
  /* do not change - fits the 12px baseline grid */
  margin: 6px 0 5px 0;
  padding: 0 10px;
  cursor: pointer;
}
.related ul {
  margin:0;
  /* do not change - fits the 12px baseline grid */
  padding: 11px 10px 0 10px;
}
.related li {
  margin-bottom: 6px;
  padding-left:15px;
}
.related__header {
  color: #000;
  font-size: 14px;
  /* 14/16 = .875; */
  font-size:.875rem;
  font-weight: 400;
  line-height:24px;
  margin:0;
  padding:7px 10px 0 10px;
}
.related__more,
.related__elsewhere {
  float:none;
  /* do not change - fits the 12px baseline grid */
  padding-bottom: 6px;
  width: 100%;
}
.related__more {
  border-bottom: solid #D3D3D1 1px;
}

/***  table of contents - as used on guide and publication pages  ***/
.toc {
  color:#2B5D92;
  margin-bottom: 36px;
  margin-bottom: 2.25rem;
  padding-bottom: 12px;
}
.toc__header {
  font-size: 16px;
  color: #000;
  border-bottom: 1px solid #6ed5c9;
  font-weight: normal;
  padding: 7px 10px;
  margin-bottom: 12px;
}
.toc li:not(.active) a:hover {
  background: #F5F5F5;
}
.toc a:hover {
  border-bottom:none;
}

.toc .active,
/* adding this style but we don't really want followable links on active menu items? */
.toc .active a {
  color:#a2a29d;
}
/***  numbered list of topics as used on guide page  ***/
.toc__numlist {
  -moz-box-sizing:border-box;
  box-sizing:border-box;
  margin:0;
  padding: 0 10px 0 10px;
  list-style-position: outside;
  width: 100%;
}
.toc__numlist li {
  list-style-type: decimal;
  list-style-position: inside;
}
.toc__numlist a,
.toc__numlist span {
  display:inline-block;
  transition:none;
  padding:5px 15px 5px 5px;
}
/***  list of chapters as used on publication page  ***/
.toc__chapter-list  {
  font-size:14px;
  font-size:.875rem;
}
.toc__chapter-list ul {
  margin: 16px 0 0 0;
  margin: 1rem 0 0 0;
}
.toc__chapter-list a {
  display:block;
  transition:none;
  padding:5px 15px;
}
.toc__chapter-list li.active span {
  padding: 5px 15px;
  display:block;
}

/*** pagination - numbers and page names - as used on guide, publication and search results pages ***/
.pag {
  color:#2B5D92;
  overflow:hidden;
  margin-bottom: 36px;
  margin-bottom: 2.25rem;
  font-size: 14px;
  /* 14/16 = .875; */
  font-size:.875rem;
  line-height:24px;
  -moz-box-sizing:border-box;
  box-sizing:border-box;
  position:relative;
}
.pag__prev-name,
.pag__next-name {
  display: block;
  padding: 17px 16px;
  padding: 1.1rem 1rem;
  -moz-box-sizing: border-box;
  box-sizing: borderbox;
  width: 100%;
  border-bottom: 0;
}
.pag__prev-num,
.pag__prev-name span {
  background: url("../images/refresh/leftdouble-chevron-5px.png") no-repeat;
  background-position: left ;
  padding-left: 12px;
}
.pag__next-num,
.pag__next-name span  {
  background: url("../images/refresh/rightdouble-chevron-5px.png") no-repeat;
  background-position: right;
  padding-right: 12px;
}
.pag__next-name:hover,
.pag__next-name:active,
.pag__prev-name:hover,
.pag__prev-name:active {
  background: #F4FCFB;
  border-bottom: 0 !important;
}
.pag-divider {
  width: 100%;
  padding: 0;
  border-bottom: 1px solid #d3d3d1;
}
.pag__prev-name {
  width: 100%;
  border-bottom: solid #D3D3D1 1px;
  text-align:left;
  border-bottom: 0;
}
.pag__next-name {
  float:left;
  clear:left;
  text-align: left;
  border-bottom: 0;
}
.pag__prev-num {
  position: absolute;
  left: 16px;
  top: 1rem;
}
.pag__next-num {
  position: absolute;
  right: 16px;
  top: 1rem;
}
.pag__numlist {
  width: 100%;
  padding: 16px 0;
  text-align:center;
}
/* ... */

